--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -1,3 +1,1 @@
-@import './krds/css/common/common.css';
-@import './krds/css/component/component.css';
-@import './krds/css/component/output.css';
+@import './theme.css';
